# CCV-Calibrage-rond

./: cache_apt.txt  commands.txt  commandsUnicap.txt  compilation.txt
installUNICAP/unicap-0.9.5/: ChangeLog  Makefile  Makefile.am  Makefile.in  README.troubleshooting  aclocal.m4  config.h.in  config.status  configure  configure.in  libtool
installUNICAP/unicap-0.9.5/cpi/: Makefile  Makefile.in
installUNICAP/unicap-0.9.5/cpi/dcam/: Makefile  Makefile.am  Makefile.in  dcam.c  dcam.h  dcam_capture.c  dcam_property.c  dcam_property_table.h  libdcam_la-1394util.lo  libdcam_la-dcam.lo  libdcam_la-dcam_busreset.lo  libdcam_la-dcam_capture.lo  libdcam_la-dcam_functions.lo  libdcam_la-dcam_property.lo  libdcam_la-dcam_v_modes.lo  libdcam_la-queue.lo
installUNICAP/unicap-0.9.5/cpi/dcam/.deps/: libdcam_la-1394util.Plo  libdcam_la-dcam.Plo  libdcam_la-dcam_busreset.Plo  libdcam_la-dcam_capture.Plo  libdcam_la-dcam_functions.Plo  libdcam_la-dcam_property.Plo  libdcam_la-dcam_v_modes.Plo  libdcam_la-queue.Plo
installUNICAP/unicap-0.9.5/cpi/dcam/.libs/: libdcam.la  libdcam.lai  libdcam.so.0.0.0T
installUNICAP/unicap-0.9.5/cpi/include/: Makefile  Makefile.am  Makefile.in  queue.h
installUNICAP/unicap-0.9.5/cpi/thing/: Makefile  Makefile.in
installUNICAP/unicap-0.9.5/cpi/v4l/: Makefile  Makefile.am  Makefile.in  libv4l.la  queue.lo  v4l.c  v4l.lo
installUNICAP/unicap-0.9.5/cpi/v4l/.deps/: queue.Plo  v4l.Plo
installUNICAP/unicap-0.9.5/cpi/v4l/.libs/: libv4l.lai  libv4l.so.0.0.0T
installUNICAP/unicap-0.9.5/cpi/v4l2cpi/: Makefile  Makefile.am  Makefile.in  libv4l2cpi_la-queue.lo  libv4l2cpi_la-tiseuvccam.lo  libv4l2cpi_la-tisuvccam.lo  libv4l2cpi_la-v4l2.lo  tisuvccam.c  v4l2.c
installUNICAP/unicap-0.9.5/cpi/v4l2cpi/.deps/: libv4l2cpi_la-queue.Plo  libv4l2cpi_la-tiseuvccam.Plo  libv4l2cpi_la-v4l2.Plo
installUNICAP/unicap-0.9.5/cpi/v4l2cpi/.libs/: libv4l2cpi.la  libv4l2cpi.lai  libv4l2cpi.so.0.0.0  libv4l2cpi.so.0.0.0T
installUNICAP/unicap-0.9.5/cpi/vid21394/: Fcp.h  Makefile  Makefile.am  Makefile.in  libvid21394_la-1394util.lo  libvid21394_la-queue.lo  libvid21394_la-vid21394_base.lo  libvid21394_la-vid21394_cpi.lo  libvid21394_la-visca.lo  vid21394_base.c  vid21394_cpi.c
installUNICAP/unicap-0.9.5/cpi/vid21394/.deps/: libvid21394_la-1394util.Plo  libvid21394_la-queue.Plo  libvid21394_la-vid21394_base.Plo  libvid21394_la-vid21394_cpi.Plo  libvid21394_la-visca.Plo
installUNICAP/unicap-0.9.5/cpi/vid21394/.libs/: libvid21394.la  libvid21394.lai  libvid21394.so.0  libvid21394.so.0.0.0T
installUNICAP/unicap-0.9.5/doc/: Makefile  Makefile.am  Makefile.in
installUNICAP/unicap-0.9.5/doc/api/: Makefile  api_template.xml  apitohtml.xsl  c_UnicapgtkDeviceProperty.xml  c_UnicapgtkPropertyDialog.xml  c_UnicapgtkVideoDisplay.xml  c_UnicapgtkVideoFormatSelection.xml  gtkapi_template.xml  main.xml  mod_unicap.xml  mod_unicapgtk.xml  mychunker.xsl  unicap_api.xml  unicap_buffer_type_t.xml  unicap_clone_handle.xml  unicap_close.xml  unicap_data_buffer_t.xml  unicap_dequeue_buffer.xml  unicap_device_t.xml  unicap_enumerate_devices.xml  unicap_enumerate_formats.xml  unicap_enumerate_properties.xml  unicap_enumerate_property.xml  unicap_format_t.xml  unicap_get_device.xml  unicap_get_format.xml  unicap_get_property.xml  unicap_handle_t.xml  unicap_lock_properties.xml  unicap_lock_stream.xml  unicap_open.xml  unicap_poll_buffer.xml  unicap_property_menu_t.xml  unicap_property_range_t.xml  unicap_property_type_enum_t.xml  unicap_property_value_list_t.xml  unicap_queue_buffer.xml  unicap_range_t.xml  unicap_rect_t.xml  unicap_reenumerate_devices.xml  (+43 more)
installUNICAP/unicap-0.9.5/doc/api/html/: c_UnicapgtkDeviceProperty.html  c_UnicapgtkPropertyDialog.html  c_UnicapgtkVideoDisplay.html  c_UnicapgtkVideoFormatSelection.html  gen.css  get_format.html  get_label.html  get_pause.html  mod_unicap.html  mod_unicapgtk.html  new.html  new_by_device.html  new_by_handle.html  reset.html  set.html  set_crop.html  set_device.html  set_label.html  set_still_image.html  start.html  stop.html  unicap_buffer_type_t.html  unicap_clone_handle.html  unicap_close.html  unicap_data_buffer_t.html  unicap_dequeue_buffer.html  unicap_device_t.html  unicap_enumerate_devices.html  unicap_enumerate_formats.html  unicap_enumerate_property.html  unicap_format_t.html  unicap_get_device.html  unicap_get_format.html  unicap_get_property.html  unicap_handle_t.html  unicap_lock_properties.html  unicap_lock_stream.html  unicap_open.html  unicap_poll_buffer.html  unicap_property_menu_t.html  (+20 more)
installUNICAP/unicap-0.9.5/doc/reference/libucil/: Makefile  Makefile.am  Makefile.in  libucil-sections.txt
installUNICAP/unicap-0.9.5/doc/reference/libunicap/: Makefile  Makefile.am  Makefile.in  (+1 more)
installUNICAP/unicap-0.9.5/examples/c++/: Makefile
installUNICAP/unicap-0.9.5/include/: Makefile  Makefile.am  Makefile.in  unicap.h  unicap_version.h
installUNICAP/unicap-0.9.5/libucil/: Makefile  Makefile.am  Makefile.in  colorspace.c  draw.c  libucil.pc  libucil.pc.in  queue.h  ucil.h  ucil_avc_avi.c  ucil_avc_avi.h  ucil_rawavi.c  ucil_rawavi.h  ucil_theora.c  ucil_theora.h  ucil_version.h  ucil_version.h.in  video_file.c  video_file.h
installUNICAP/unicap-0.9.5/libunicap/: Makefile  Makefile.am  Makefile.in  check_match.c  check_match.lo  libunicap.pc  unicap.c  unicap.lo  unicap_cache.lo  unicap_helpers.lo  unicap_private.h
installUNICAP/unicap-0.9.5/libunicap/.deps/: check_match.Plo  unicap.Plo  unicap_cache.Plo  unicap_helpers.Plo
installUNICAP/unicap-0.9.5/libunicap/.libs/: libunicap.la  libunicap.lai
installUNICAP/unicap-0.9.5/libunicapgtk/: Makefile  Makefile.am  Makefile.in  backend.h  backend_gtk.c  backend_gtk.h  backend_xv.c  libunicapgtk.pc  libunicapgtk.pc.in  unicapgtk_device_property.c  unicapgtk_device_selection.c  unicapgtk_property_dialog.c  unicapgtk_version.h  unicapgtk_version.h.in  unicapgtk_video_display.c
installUNICAP/unicap-0.9.5/po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  de.gmo  fr.gmo  fr.po  ru.gmo
installUNICAP/unicap-0.9.5/tests/: Makefile  Makefile.am  Makefile.in
(+439 files in other folders)
