SUBDIRS = reference/libunicapgtk reference/libunicap reference/libucil

EXTRA_DIST = \
api/api_template.xml \
api/apitohtml.xsl \
api/api_type_template.xml \
api/c_UnicapgtkDeviceProperty.xml \
api/c_UnicapgtkPropertyDialog.xml \
api/c_UnicapgtkVideoDisplay.xml \
api/c_UnicapgtkVideoFormatSelection.xml \
api/gtkapi_template.xml \
api/main.xml \
api/Makefile \
api/mod_unicapgtk.xml \
api/mod_unicap.xml \
api/mychunker.xsl \
api/unicap_api.xml \
api/unicap_buffer_type_t.xml \
api/unicap_clone_handle.xml \
api/unicap_close.xml \
api/unicap_data_buffer_t.xml \
api/unicap_dequeue_buffer.xml \
api/unicap_device_t.xml \
api/unicap_enumerate_devices.xml \
api/unicap_enumerate_formats.xml \
api/unicap_enumerate_properties.xml \
api/unicap_enumerate_property.xml \
api/unicap_format_t.xml \
api/unicap_get_device.xml \
api/unicap_get_format.xml \
api/unicap_get_property.xml \
api/unicapgtk_device_property_get_label.xml \
api/unicapgtk_device_property_new_by_handle.xml \
api/unicapgtk_device_property_new.xml \
api/unicapgtk_device_property_redraw.xml \
api/unicapgtk_device_property_set_label.xml \
api/unicapgtk_device_property_set.xml \
api/unicapgtk_device_property_update.xml \
api/unicapgtk_property_dialog_new_by_handle.xml \
api/unicapgtk_property_dialog_new.xml \
api/unicapgtk_property_dialog_reset.xml \
api/unicapgtk_property_dialog_set_device.xml \
api/unicapgtk_video_display_get_crop.xml \
api/unicapgtk_video_display_get_device.xml \
api/unicapgtk_video_display_get_handle.xml \
api/unicapgtk_video_display_get_pause.xml \
api/unicapgtk_video_display_get_still_image.xml \
api/unicapgtk_video_display_new_by_device.xml \
api/unicapgtk_video_display_new_by_handle.xml \
api/unicapgtk_video_display_new_by_name.xml \
api/unicapgtk_video_display_new.xml \
api/unicapgtk_video_display_set_crop.xml \
api/unicapgtk_video_display_set_device.xml \
api/unicapgtk_video_display_set_format.xml \
api/unicapgtk_video_display_set_pause.xml \
api/unicapgtk_video_display_set_still_image.xml \
api/unicapgtk_video_display_start.xml \
api/unicapgtk_video_display_stop.xml \
api/unicapgtk_video_format_selection_get_format.xml \
api/unicapgtk_video_format_selection_new_by_handle.xml \
api/unicapgtk_video_format_selection_new.xml \
api/unicapgtk_video_format_selection_set_device.xml \
api/unicap_handle_t.xml \
api/unicap_lock_properties.xml \
api/unicap_lock_stream.xml \
api/unicap_open.xml \
api/unicap_poll_buffer.xml \
api/unicap_property_menu_t.xml \
api/unicap_property_range_t.xml \
api/unicap_property_t.xml \
api/unicap_property_type_enum_t.xml \
api/unicap_property_value_list_t.xml \
api/unicap_queue_buffer.xml \
api/unicap_range_t.xml \
api/unicap_rect_t.xml \
api/unicap_reenumerate_devices.xml \
api/unicap_reenumerate_formats.xml \
api/unicap_reenumerate_properties.xml \
api/unicap_set_format.xml \
api/unicap_set_property.xml \
api/unicap_start_capture.xml \
api/unicap_stop_capture.xml \
api/unicap_unlock_properties.xml \
api/unicap_unlock_stream.xml \
api/unicap_void_device.xml \
api/unicap_void_format.xml \
api/unicap_void_property.xml \
api/unicap_wait_buffer.xml \
api/html/c_UnicapgtkDeviceProperty.html \
api/html/c_UnicapgtkPropertyDialog.html \
api/html/c_UnicapgtkVideoDisplay.html \
api/html/c_UnicapgtkVideoFormatSelection.html \
api/html/gen.css \
api/html/get_crop.html \
api/html/get_device.html \
api/html/get_format.html \
api/html/get_label.html \
api/html/get_pause.html \
api/html/get_still_image.html \
api/html/images/icon_download.gif \
api/html/images/icon_extern.gif \
api/html/images/icon_xml.gif \
api/html/images/logo_sf.png \
api/html/images/logo_tis.gif \
api/html/images/logo_unicap.gif \
api/html/images/mailadd.gif \
api/html/images/pixel.gif \
api/html/images/unicap_overview.gif \
api/html/mod_unicapgtk.html \
api/html/mod_unicap.html \
api/html/new_by_device.html \
api/html/new_by_handle.html \
api/html/new.html \
api/html/reset.html \
api/html/set_crop.html \
api/html/set_device.html \
api/html/set.html \
api/html/set_label.html \
api/html/set_pause.html \
api/html/set_still_image.html \
api/html/start.html \
api/html/stop.html \
api/html/unicap_buffer_type_t.html \
api/html/unicap_clone_handle.html \
api/html/unicap_close.html \
api/html/unicap_data_buffer_t.html \
api/html/unicap_dequeue_buffer.html \
api/html/unicap_device_t.html \
api/html/unicap_enumerate_devices.html \
api/html/unicap_enumerate_formats.html \
api/html/unicap_enumerate_property.html \
api/html/unicap_format_t.html \
api/html/unicap_get_device.html \
api/html/unicap_get_format.html \
api/html/unicap_get_property.html \
api/html/unicap_handle_t.html \
api/html/unicap_lock_properties.html \
api/html/unicap_lock_stream.html \
api/html/unicap_open.html \
api/html/unicap_poll_buffer.html \
api/html/unicap_property_menu_t.html \
api/html/unicap_property_range_t.html \
api/html/unicap_property_t.html \
api/html/unicap_property_type_enum_t.html \
api/html/unicap_property_value_list_t.html \
api/html/unicap_queue_buffer.html \
api/html/unicap_rect_t.html \
api/html/unicap_reenumerate_devices.html \
api/html/unicap_reenumerate_formats.html \
api/html/unicap_reenumerate_properties.html \
api/html/unicap_set_format.html \
api/html/unicap_set_property.html \
api/html/unicap_start_capture.html \
api/html/unicap_stop_capture.html \
api/html/unicap_unlock_properties.html \
api/html/unicap_unlock_stream.html \
api/html/unicap_void_device.html \
api/html/unicap_void_format.html \
api/html/unicap_void_property.html \
api/html/unicap_wait_buffer.html \
api/html/update.html 
